Fix deprecated URL constructor
by replacing new URL(String) with URI.create(String).toURL()
[AI assisted]

Change-Id: I0128318a783a27c2db2aa188bdaf192782f69313